app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meuapp-service
  labels:
    app: meuapp
spec:
  type: ClusterIP
  selector:
    app: meuapp
  ports:
    - port: 80
      targetPort: 80
