app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meuapp-ingress
  labels:
    app: meuapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: meuapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meuapp-service
                port:
                  number: 80
